smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-space.smithy
// Syntax error at line 5, column 1: Unknown shape type: usecom | Model
$version: "2.0"
namespace smithy.example

usecom.foo#Bar
